--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"test": "playwright test",
+		"test:chrome": "npx playwright test --headed --browser=chromium",
+		"test:firefox": "npx playwright test --headed --browser=firefox",
+		"test:safari": "npx playwright test --headed --browser=webkit",
 		"lint": "prettier --plugin-search-dir . --check .",
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.28.1",
+		"@playwright/test": "^1.37.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
 		"prettier": "^2.8.0",
