--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
 		"svelte": "^4.0.5",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"open-props": "^1.5.15",
+		"postcss-jit-props": "^1.0.13"
+	}
 }
