--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,9 @@
 {
+	// custom props in those files will be available for autocomplete
 	"cssvar.files": [
 		"./node_modules/open-props/open-props.min.css",
-		"./node_modules/open-props/colors-hsl.min.css"
-		// if you have an alternative path to where your styles are located
-		// you can add it in this array of files
-		// "assets/styles/variables.css"
+		// "./node_modules/open-props/colors-hsl.min.css",
+		"./src/routes/variables.css"
 	],
 
 	// Do not ignore node_modules css files, which is ignored by default
