--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@csstools/postcss-global-data": "^2.1.0",
 		"@playwright/test": "^1.37.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"postcss-custom-media": "^10.0.0",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.5",
