--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	"type": "module",
 	"dependencies": {
 		"open-props": "^1.5.15",
-		"postcss-jit-props": "^1.0.13"
+		"postcss-jit-props": "^1.0.13",
+		"sveltekit-i18n": "^2.4.2"
 	}
 }
