--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"modern-normalize": "^2.0.0",
 		"open-props": "^1.5.15",
 		"postcss-jit-props": "^1.0.13",
 		"sveltekit-i18n": "^2.4.2"
