--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"idb": "^7.1.1",
 		"modern-normalize": "^2.0.0",
 		"open-props": "^1.5.15",
 		"postcss-jit-props": "^1.0.13",
